--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Enable Push Messaging</button>
       </p>
       <section class="subscription-details js-subscription-details is-invisible">
-        <p>subscription from push service.</p>
+        <div>SUBSCRIPTION</div>
         <pre><code class="js-subscription-json"></code></pre>
       </section>
     </main>
