--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
     <main>
       <h3>How to</h3>
       <hr />
-      <ol>
-        <li>Open <a href="https://web-push-codelab.glitch.me/" target="_blank">Push Companion Site</a>. (Keep open it.)</li>
-        <li>
-          Copy & Paste <b>Public Key</b>.
-          <div><input type="text" id="publickey" /></div>
-        </li>
-        <li>Click <b>[ENABLE PUSH MESSAGING]</b> button.</li>
-        <li>Set Permit Nortification to agree if you need.</li>
-        <li>Set a below json text to <b>'Subscription to Send To'</b> field.</li>
-        <li>Set a push message to <b>'Text to Send'</b> field.</li>
-        <li>Click <b>[SEND PUSH MESSAGE]</b> button.</li>
-      </ol>
+      <div>
+        <ol>
+          <li>Open <a href="https://web-push-codelab.glitch.me/" target="_blank">Push Companion Site</a>. (Keep open it.)</li>
+          <li>
+            Copy & Paste <b>Public Key</b>.
+            <div><input type="text" id="publickey" /></div>
+          </li>
+          <li>Click <b>[ENABLE PUSH MESSAGING]</b> button.</li>
+          <li>Set Permit Nortification to agree if you need.</li>
+          <li>Set a below json text to <b>'Subscription to Send To'</b> field.</li>
+          <li>Set a push message to <b>'Text to Send'</b> field.</li>
+          <li>Click <b>[SEND PUSH MESSAGE]</b> button.</li>
+        </ol>
+      </div>
       <hr />
       <p>
         <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Enable Push Messaging</button>
